修改 header news 中文名稱

--- a/src/layouts/_Header.pug
+++ b/src/layouts/_Header.pug
@@ -32,7 +32,7 @@ header.l-header
         li.c-nav__btn-wrap
           a.c-nav__btn(href="news.html")
             span.u-ff-en.u-text-lg NEWS
-            span 最新消息
+            span 最新消息123
         li.c-nav__btn-wrap
           a.c-nav__btn(href="##")
             span.u-ff-en.u-text-lg ABOUT
