更改首頁 LINEUP 標題

--- a/src/index.pug
+++ b/src/index.pug
@@ -28,7 +28,7 @@ html(lang="en")
       section.--gradient.u-pb-0.l-lineup
         .container
           //- h2.u-ff-en.u-text-4xl.u-fw-900.u-color-secondary LINEUP
-          h2.o-section-title.u-mb-40(data-aos="fade-up") LINEUP
+          h2.o-section-title.u-mb-40(data-aos="fade-up") LINEUP123
             span.o-section-title__subtitle MEGAPORT FESTIVAL
 
           //- h2.u-text-4xl.l-lineup__title LINEUP，
