--- a/src/index.pug
+++ b/src/index.pug
@@ -29,7 +29,7 @@ html(lang="en")
         .container
           //- h2.u-ff-en.u-text-4xl.u-fw-900.u-color-secondary LINEUP
           h2.o-section-title.u-mb-40(data-aos="fade-up") LINEUP123
-            span.o-section-title__subtitle MEGAPORT FESTIVAL
+            span.o-section-title__subtitle MEGAPORT FESTIVAL123
 
           //- h2.u-text-4xl.l-lineup__title LINEUP，
           //-   span.u-inline.u-color-secondary MEGAPORT FESTIVAL
