--- a/src/layouts/_Settings.pug
+++ b/src/layouts/_Settings.pug
@@ -1,5 +1,6 @@
 -
-  const baseUrl = 'http://127.0.0.1:5501/dist';
+  //- const baseUrl = 'http://127.0.0.1:5501/dist';
+  const baseUrl = 'https://jarvischao.github.io/magaport-teaching';
   const siteName = '（專案實作）Megaport Festival 大港開唱 2021';
   // 頁面路徑
   let path = '';
